--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,16 +32,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    /*buildFeatures {
+    buildFeatures {
         dataBinding true
-        viewBinding true
-    }*/
+//        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.1'
+    implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
